# AdisProject

./: .firebaserc  .gitignore  README.md  app.js  backend.py  firebase.json  index2.html  package-lock.json  pyproject.toml  register.html  register.js  script_tag
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/: add-contact.html  contacts-page.html  firebase-init.js  index.html  login.html
public/js/: add-contact.js  firebase-init.js  login.js
