[tool.poetry]
name = "adisproject"
version = "0.1.0"
description = ""
authors = ["Boris Zikeyev <boris.zikeyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
